# gnu_myserver

myserver/: NEWS  bootstrap.conf  configure.ac
myserver/binaries/: Makefile.am  myserver.default.sch  virtualhosts.default.sch  virtualhosts.default.xml
myserver/binaries/certificates/: Makefile.am
myserver/binaries/logs/: Makefile.am
myserver/binaries/plugins/: Makefile.am
myserver/binaries/system/: Makefile.am
myserver/binaries/web/: Makefile.am
myserver/binaries/web/cgi-bin/: Makefile.am
myserver/binaries/web/cgi-src/math_sum/: Makefile.am
myserver/binaries/web/cgi-src/post/: Makefile.am
myserver/documentation/: virtual_hosts.texi
myserver/include/base/mem_buff/: mem_buff.h
myserver/include/base/socket/: ssl_socket.h
myserver/include/base/ssl/: ssl.h
myserver/include/conf/: guile_conf.h
myserver/include/connections_scheduler/: connections_scheduler.h
myserver/include/server/: clients_thread.h  server.h
myserver/src/: myserver.cpp
myserver/src/base/process/: process.cpp
myserver/src/base/socket/: socket.cpp
myserver/src/base/socket_pair/: socket_pair.cpp
myserver/src/base/ssl/: ssl.cpp
myserver/src/conf/: Makefile.am  guile_conf.cpp  xml_conf.cpp
myserver/src/connections_scheduler/: connections_scheduler.cpp
myserver/src/protocol/http/: http.cpp  http_headers.cpp
myserver/src/protocol/http/env/: env.cpp
myserver/src/server/: clients_thread.cpp  server.cpp
myserver/tests/: test_fork_server.cpp  test_ssl_socket.cpp
